[gd_scene load_steps=10 format=3 uid="uid://dvixv20hvw8h3"]

[ext_resource type="Script" path="res://scripts/UI/TimeChanger.gd" id="1_7cw6t"]
[ext_resource type="Texture2D" uid="uid://8ggihh27mlrr" path="res://sprites/blob_shadow.png" id="2_8gjxc"]
[ext_resource type="Texture2D" uid="uid://376kuruoy34p" path="res://sprites/UI/clock/clock_background.png" id="2_l43bl"]
[ext_resource type="Texture2D" uid="uid://o1euhrx7dop7" path="res://sprites/UI/clock/clock_needle.png" id="3_it2gh"]
[ext_resource type="Script" path="res://addons/finite_state_machine/scripts/finite_state_machine.gd" id="4_s4gue"]
[ext_resource type="Script" path="res://scripts/SealedDoorSM/default_state.gd" id="5_yrlca"]
[ext_resource type="Script" path="res://scripts/SealedDoorSM/dragged_state.gd" id="6_41i7l"]
[ext_resource type="Script" path="res://addons/finite_state_machine/scripts/state_machine_state.gd" id="7_rgqup"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nksjp"]
size = Vector2(143, 49.9997)

[node name="TimeChanger" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_7cw6t")
unique_id = "TimeChanger"

[node name="ClickOutside" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="btnDawn" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "DAWN"

[node name="btnDay" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "DAY"

[node name="btnDusk" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "DUSK"

[node name="btnNight" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "NIGHT"

[node name="ShadowBackground" type="TextureRect" parent="CenterContainer"]
custom_minimum_size = Vector2(700, 700)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_8gjxc")
stretch_mode = 5

[node name="ClockBackground" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_l43bl")

[node name="ClockHand2" type="Sprite2D" parent="CenterContainer"]
rotation = -1.5708
texture = ExtResource("3_it2gh")

[node name="ClockHand" type="Sprite2D" parent="CenterContainer"]
rotation = -1.5708
texture = ExtResource("3_it2gh")

[node name="Area2D" type="Area2D" parent="CenterContainer/ClockHand"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterContainer/ClockHand/Area2D"]
position = Vector2(81, 0.000153267)
shape = SubResource("RectangleShape2D_nksjp")

[node name="Button" type="Button" parent="CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
action_mode = 0
text = "Sleep"

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource("4_s4gue")

[node name="DefaultState" type="Node" parent="."]
script = ExtResource("5_yrlca")

[node name="DraggingState" type="Node" parent="."]
script = ExtResource("6_41i7l")

[node name="PassingTimeState" type="Node" parent="."]
script = ExtResource("7_rgqup")

[connection signal="gui_input" from="ClickOutside" to="." method="_on_click_outside_gui_input"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/btnDawn" to="." method="_on_btn_dawn_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/btnDay" to="." method="_on_btn_day_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/btnDusk" to="." method="_on_btn_dusk_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/btnNight" to="." method="_on_btn_night_button_down"]
[connection signal="mouse_entered" from="CenterContainer/ClockHand/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/ClockHand/Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="CenterContainer/Button" to="." method="_on_button_pressed"]
